# siredmar_projects

./: README.md
embedded/AVR/: dg_16080_atmega32.rar
embedded/AVR/8080_display_drivers/Atmega128_SSD1289/: .cproject  .project  Makefile  Makefile.avr  Makefile.pc
embedded/AVR/CLP510_ChipReset/: Makefile  main.elf  main.hex
embedded/AVR/CLP510_ChipReset/inc/: platform_types.h
embedded/AVR/CLP510_ChipReset/src/: a.out  main.c
embedded/AVR/dg16080_atmega32/: Makefile  gps_t.c  graphics.c  graphics.h  images.c  images.h  lc7981.c  lc7981.h  touch.c  touch.h  widgets.c  widgets.h  windows.c  windows.h
embedded/AVR/displayboard - gps bicycle tachometer/doc/: Doku.txt
embedded/AVR/displayboard - gps bicycle tachometer/src/: Makefile  datatypes.h  main.c
embedded/AVR/yalc - yet anoter livingroom clock/: readme.txt
embedded/RPi/RPI_SSD1963/: set_environment.sh
embedded/RPi/RPI_SSD1963/misc/: setup_crosscompile.sh  (+1 more)
embedded/RPi/ssd1963_framebuffer/: ssd1963.c  ssd1963_old.c
embedded/RPi/ssd1963_userspace/: Makefile  copy.sh  rpi_ssd1963
pc/Filter_Codestub/: README.md
pc/Filter_Codestub/inc/: filter_types.h
pc/Filter_Codestub/src/: main.c  scaledown
pc/szapgtk/: Makefile  Makefile.am  Makefile.in  README.md  szapgtk  szapgtk.cpp
yalc - yet anoter livingroom clock/: 8-mega.sch  yalc.graphml
yalc - yet anoter livingroom clock/yalc/: eagle.epf  yalc.b#1  yalc.b#2  yalc.b#3  yalc.b#4  yalc.b#5  yalc.b#6  yalc.b#7  yalc.b#8  yalc.b#9  yalc.brd  yalc.pro  yalc.s#1  yalc.s#2  yalc.s#3  yalc.s#4  yalc.s#5  yalc.s#6  yalc.s#7  yalc.s#8  yalc.s#9  yalc.sch
(+214 files in other folders)
