bin_PROGRAMS = duke_net
duke_net_SOURCES = duke_net.c TOTO

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
duke_net_LDFLAGS = $(all_libraries) 
noinst_HEADERS = enter.h shutdown.h output.h gui.h write_ip.h start_game.h save.h start_game_single.h window_config.h
